--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3'
 
 services:
    app:
@@ -18,7 +18,7 @@ services:
          - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
          - ./.docker/nginx/logs/:/var/log/nginx
       ports:
-         - "8080:80"
+         - "80:80"
       depends_on:
          - app
       networks:
@@ -28,10 +28,10 @@ services:
       image: mysql
       container_name: mysql
       environment:
-         MYSQL_ROOT_PASSWORD: rootpass
-         MYSQL_DATABASE: mydb
-         MYSQL_USER: user
-         MYSQL_PASSWORD: userpass
+         MYSQL_DATABASE: "${DB_HOST}"
+         MYSQL_USER: "${DB_USER}"
+         MYSQL_PASSWORD: "${DB_PASSWORD}"
+         MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
       volumes:
          - ./.docker/mysql/data:/var/lib/mysql
       ports:
@@ -42,3 +42,6 @@ services:
 networks:
    app-network:
       driver: bridge
+
+volumes:
+   db_data:
