--- a/config/php/php.ini
+++ b/config/php/php.ini
@@ -3,7 +3,7 @@ zend_extension=xdebug.so
 [xdebug]
 xdebug.mode=debug
 xdebug.start_with_request=yes
-xdebug.client_host=172.30.0.1
+xdebug.client_host=host.docker.internal
 xdebug.client_port=9001
 xdebug.log=/var/log/xdebug.log
 xdebug.idekey=PHPSTORM
