--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
-version: '3'
+version: '3.8'
 
 services:
    app:
       build:
-         context: ./.docker/php
+         context: ./config/php
       container_name: php
       volumes:
-         - ./src:/var/www/html
+         - ./app:/var/www/html
       networks:
          - app-network
 
@@ -14,9 +14,9 @@ services:
       image: nginx:latest
       container_name: nginx
       volumes:
-         - ./src:/var/www/html
-         - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-         - ./.docker/nginx/logs/:/var/log/nginx
+         - ./app:/var/www/html
+         - ./config/nginx/default.conf:/etc/nginx/conf.d/default.conf
+         - ./config/nginx/logs/:/var/log/nginx
       ports:
          - "80:80"
       depends_on:
@@ -28,12 +28,12 @@ services:
       image: mysql
       container_name: mysql
       environment:
-         MYSQL_DATABASE: "${DB_HOST}"
+         MYSQL_DATABASE: "${DB_NAME}"
          MYSQL_USER: "${DB_USER}"
          MYSQL_PASSWORD: "${DB_PASSWORD}"
          MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
       volumes:
-         - ./.docker/mysql/data:/var/lib/mysql
+         - ./config/mysql/data:/var/lib/mysql
       ports:
          - "3306:3306"
       networks:
