--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,21 @@ services:
          context: ./config/php
       container_name: php
       volumes:
-         - ./app:/var/www/html
+         - .:/var/www/html
       networks:
          - app-network
+      environment:
+         - DB_HOST=db
+         - DB_NAME=${DB_NAME}
+         - DB_USER=${DB_USER}
+         - DB_PASSWORD=${DB_PASSWORD}
+         - DB_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
 
    web:
       image: nginx:latest
       container_name: nginx
       volumes:
-         - ./app:/var/www/html
+         - ./public/:/var/www/html/public
          - ./config/nginx/default.conf:/etc/nginx/conf.d/default.conf
          - ./config/nginx/logs/:/var/log/nginx
       ports:
