--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "webertysilveira/devstack",
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "Src\\": "src/"
         }
     },
     "autoload-dev": {
